Closed Bug 1142295 Opened 11 years ago Closed 10 years ago

DR_State::ParseRulesFile leaks |inFile|

Categories

(Core :: Layout, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla41
Tracking Status
firefox41 --- fixed

People

(Reporter: erahm, Assigned: joseriosneto, Mentored)

Details

(Whiteboard: [MemShrink:P3][CID 1286577][lang=c++][good first bug])

Attachments

(1 file)

If the |GECKO_DISPLAY_REFLOW_RULES_FILE| env var is set, we leak |inFile| [1] in DR_State::ParseRulesFile. [1] https://hg.mozilla.org/mozilla-central/annotate/bc6aeea72290/layout/generic/nsFrame.cpp#l9416
Whiteboard: [MemShrink][CID 1286577] → [MemShrink:P3][CID 1286577]
Mentor: erahm
Whiteboard: [MemShrink:P3][CID 1286577] → [MemShrink:P3][CID 1286577][lang=c++][good first bug]
Eric, here's a patch closing the fd.
Attachment #8606054 - Flags: review?(erahm)
Assignee: nobody → joseriosneto
Comment on attachment 8606054 [details] [diff] [review] bug1142295_fix_fd_leak.patch Review of attachment 8606054 [details] [diff] [review]: ----------------------------------------------------------------- Looks good. r=me As this is in core code (not a tool or test) I'm going to push it to the try server before landing.
Attachment #8606054 - Flags: review?(erahm) → review+
The try push looks good, lets get this landed.
Great! Thank you! :)
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla41
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: