layout/generic/nsFrame.cpp
@@ -9445,6 +9445,8 @@ void DR_State::ParseRulesFile()
           mActive = true;
         }
       }
+
+      fclose(inFile);
     }
   }
 }
